# hierachical_safety_governor

./: .gitignore  Claude.md  README.md  inspect_runner.py  install.sh  orchestrator.py  pyproject.toml  requirements.txt  run_once.py  stream_ui.py  test_orchestrator.py  test_stability.sh
adapters/: autogen_agent_adapter.py
archive/configs/: demo_mixed_strategies.yaml  demo_mock_behaviors.yaml  demo_ollama_flexible.yaml  demo_parallel_communication.yaml  demo_parallel_communication_simple.yaml  demo_parallel_llm_fixed.yaml
archive/scripts/: analyze_collusion.py  analyze_communication.py  check_ollama.py  debug_llm_agent.py  inspect_runner.py  visualize_communication.py
configs/: README.md  README_demos.md  README_parallel_communication.md  demo.yaml  demo_collusion_mock.yaml  demo_collusion_quick.yaml  demo_collusion_study.yaml  demo_communication_patterns.yaml  demo_mixed_communication.yaml  demo_mixed_strategies.yaml  demo_mock_behaviors.yaml  demo_ollama.yaml  demo_ollama_flexible.yaml  demo_openai.yaml  demo_parallel_communication.yaml  demo_parallel_communication_llm.yaml  demo_parallel_communication_llm_working.yaml  demo_parallel_minimal.yaml  demo_parallel_mixed.yaml  example_basic.yaml  example_collusion_study.yaml  example_communication.yaml  test_minimal.yaml  test_single_seed.yaml
defenses/: hierarchical_governor.py
docs/: CLEANUP_PLAN.md  README.md  USAGE.md  concepts.md  installation.md  plan.md  quickstart.md
docs/architecture/: overview.md
docs/development/: environments.md
docs/guides/: configuration.md  llm-setup.md  parallel-communication.md  running-experiments.md
environments/: __init__.py  price_game_env.py
referees/: simple_collusion_referee.py
scripts/: analyze.py  analyze_collusion.py  run.py  run_parallel_demo.py  stream_ui.py  test_llm_connection.py  test_llm_direct.py  test_single_llm_agent.py
src/safety_governor/: __init__.py
src/safety_governor/adapters/: __init__.py  autogen_agent_adapter.py  communicating_agent_adapter.py
src/safety_governor/core/: __init__.py  orchestrator.py  parallel_orchestrator.py
src/safety_governor/defenses/: hierarchical_governor.py
src/safety_governor/referees/: simple_collusion_referee.py
tests/: test_llm_integration.py  test_orchestrator.py  test_parallel_communication.py  test_stability.sh
tests/configs/: test_single_seed.yaml
utils/: event_bus.py
(+5 files in other folders)
