[project]
name = "hierarchical-safety-governor"
version = "0.1.0"
description = "A hierarchical safety governor for AI agent systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyautogen[openai]>=0.4.0",
    "gymnasium>=0.29.0",
    "pyyaml>=6.0",
    "duckdb>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "adapters",
    "defenses",
    "environments",
    "referees",
    "utils",
]
include = [
    "orchestrator.py",
    "run_once.py",
]